--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,10 @@ body {
   );
   text-align: center;
 }
+.app-title {
+  margin-top: 75px;
+  margin-bottom: 50px;
+  font-size: 76px;
+  color: #0ccac4;
+  font-family: 'Agbalumo';
+}
